# ratatui-declare

./: Cargo.toml  README
src/: lib.rs  parse.rs  run.rs  widgets.rs
src/ratatui-declare-test/: Cargo.toml
src/ratatui-declare-test/src/: main.rs
src/ratatui-declare-test/src/templates/: basic.rat
src/widget_wrappers/: mod.rs  wrapper_layout.rs  wrapper_paragraph.rs  wrapper_widget.rs  wrapper_widgets.rs
