workspace = { members = ["src/ratatui-declare-test"] }
[package]
name = "ratatui-declare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
ratatui = "0.27.0-alpha.2"
strum = "0.26.2"
crossterm = "0.27.0"
eyre = "0.6.12"
anyhow = "1.0.81"
